# remora-test

./: .gitignore  .tmuxp.yaml  CLAUDE.md  DEMO_SCRIPT.md  DEMO_SCRIPT_LIVE.md  README.md  devenv.nix  pyproject.toml  remora.constrained.yaml  remora.stress.yaml  remora.yaml
.github/workflows/: demo-smoke.yml
.grail/aggregate_digest/: check.json  externals.json  inputs.json  monty_code.py  stubs.pyi
.grail/ask_human/: check.json  externals.json  inputs.json  monty_code.py  stubs.pyi
.grail/broadcast/: check.json
.grail/broadcast_children/: check.json
.grail/categorize/: check.json  externals.json  monty_code.py  stubs.pyi
.grail/companion_link/: check.json  inputs.json  monty_code.py  stubs.pyi
.grail/companion_reflect/: check.json  inputs.json  monty_code.py  stubs.pyi
.grail/companion_summarize/: check.json  inputs.json  monty_code.py  stubs.pyi
.grail/demo_echo/: check.json  inputs.json  monty_code.py  stubs.pyi
.grail/find_links/: check.json  externals.json  stubs.pyi
.grail/get_parent/: check.json
.grail/kv_get/: check.json
.grail/kv_set/: check.json  externals.json  monty_code.py  stubs.pyi
.grail/list_children/: check.json
.grail/list_recent_changes/: check.json  externals.json  monty_code.py  stubs.pyi
.grail/query_agents/: check.json  externals.json  inputs.json  monty_code.py  stubs.pyi
.grail/reflect/: check.json  externals.json  monty_code.py  stubs.pyi
.grail/review_diff/: check.json  externals.json  inputs.json  monty_code.py  stubs.pyi
.grail/rewrite_self/: check.json
.grail/rewrite_to_magic/: check.json  externals.json  monty_code.py  stubs.pyi
.grail/scaffold/: check.json
.grail/semantic_search/: check.json  externals.json  inputs.json  monty_code.py  stubs.pyi
.grail/send_message/: check.json  externals.json  monty_code.py  stubs.pyi
.grail/show_dependencies/: check.json  externals.json  inputs.json  monty_code.py  stubs.pyi
.grail/show_importers/: check.json  externals.json  monty_code.py  stubs.pyi
.grail/show_relationship_edges/: check.json  externals.json  inputs.json  monty_code.py  stubs.pyi
.grail/submit_review/: check.json  externals.json  inputs.json  monty_code.py  stubs.pyi
.grail/subscribe/: check.json  externals.json  inputs.json  monty_code.py  stubs.pyi
.grail/summarize/: check.json  externals.json
.grail/summarize_tree/: check.json
.grail/unsubscribe/: check.json
.scratch/: REPO_RULES.md
bundles/demo-code-agent/: bundle.yaml
bundles/demo-virtual-observer/: bundle.yaml
demo/00_repo_baseline/: PRESENTER_CUE_SHEET.md  README.md  demo.yaml
demo/01-clone-to-knowledge-graph/: PRESENTER_CUE_SHEET.md  README.md  demo.yaml
docs/: architecture.md
scripts/: __init__.py  demo00.py  demo01_live.py  democtl.py  install_local_ui_assets.sh  lsp_event_bridge_probe.py  playwright_screenshot.py  run_demo_checks.sh  test_cursor_focus.sh  test_demo_runtime.sh  test_lsp_event_bridge.sh  test_lsp_startup.sh  test_multilang_discovery.sh  test_proposal_accept_flow.sh  test_proposal_flow.sh  test_reflection_pipeline.sh  test_relationship_tools.sh  test_remora.sh  test_runtime_guardrails.sh  test_search.sh  test_sse_contract.sh  test_subscription_filters.sh  test_ui_dependencies.sh  test_virtual_agents.sh
scripts/_lib/: __init__.py  commands.py  http.py  manifest.py  paths.py  playwright_ui.py  runtime.py
src/: main.py
src/api/: orders.py
tests/: conftest.py
(+177 files in other folders)
